noinst_libdir = $(top_builddir)/out
noinst_lib_LIBRARIES = libzanbase.a
libzanbase_a_SOURCES = \
	zObject.cpp \
	zReference.cpp \
	zBuffer.cpp \
	zEvent.cpp \
	zThread.cpp \
	zMutex.cpp \
	zScopeMutex.cpp \
	zEvent.cpp \
	zString.cpp \
	zStringTokenizer.cpp \
	zStringBuffer.cpp \
  zVector.cpp \
  zVectorString.cpp \
	zSocketAddress.cpp \
	zSocketAddressIPv4.cpp \
	zSocketAddressIPv6.cpp \
	zSocketBase.cpp \
	zSocketIP.cpp \
	zSocketTCP.cpp \
	zSocketTCPClient.cpp \
	zSocketTCPServer.cpp \
	zSocketTCPServerListener.cpp \
	zSocketTCPConnection.cpp \
	zSocketTCPConnectionListener.cpp \
	zLogger.cpp \
	zLoggerAppender.cpp \
	zLoggerAppenderConsole.cpp
