noinst_libdir = $(top_srcdir)/out
noinst_lib_LIBRARIES = libzanssh.a
libzanssh_a_SOURCES = \
	SSHPacket.cpp \
	SSHMessage.cpp \
	SSHMessageKeyInit.cpp \
	SSHMessageKeyDHInit.cpp \
	SSHMessageKeyDHReplay.cpp \
	SSHMessageDisconnect.cpp \
	SSHTransport.cpp \
	SSHTransportListener.cpp \
	KeyExchanger.cpp \
	KeyExchangerListener.cpp \
	KeyExchangerDH.cpp

